Add 2021-10-01 journal entry

--- a/content/posts/journal/2021/09/30.md
+++ b/content/posts/journal/2021/09/30.md
@@ -2,10 +2,10 @@
 title: September 30th 2021
 subtitle: Journal entry for 2021-09-30; life update; finished The Trial; other random thoughts
 date: '2021-09-30'
-lastupdated: '2021-09-30'
+lastupdated: '2021-10-01'
 published: true
 layout: post
-topics: ['journal', 'life update', 'the trial', 'franz kafka']
+topics: ['journal', 'life update', 'the trial', 'kafka, franz', 'the Crisis', 'mother', 'father', 'songs from the arc of life', 'capgras' ]
 category: journal
 ---
 
@@ -16,7 +16,7 @@ I'm extremely excited, but also a little nervous -- NYC seems like a huge city (
 
 Finished reading *The Trial* by Franz Kafka today. A plot recap for myself:
 
-Arrest in K.'s room → talk with Frau Grubach → talk with Fraulein Burster → appearance in court → encounter with washlady → visit to law offices → two guards and the flogger in the maintenance room → visit from K.'s uncle and visit to the lawyer → conversation with the painter → visit to lawyer for his dismissal, Block the merchant → cathederal → the ending
+Arrest in K.'s room → talk with Frau Grubach → talk with Fräulein Bürstner → appearance in court → encounter with washlady → visit to law offices → two guards and the flogger in the maintenance room → visit from K.'s uncle and visit to the lawyer → conversation with the painter → visit to lawyer for his dismissal, Block the merchant → cathederal → the ending
 
 
 Some initial notes and questions before I go back to revisit the quotes I marked: 
@@ -26,8 +26,8 @@ Some initial notes and questions before I go back to revisit the quotes I marked
 - resonates with my Crisis and in general, the torment of the human psyche 
   - paranoia throughout the novel reminds me of the day following the peak of the Crisis and how my own mother was scaring me, how I was analyzing/reading so far into her actions and words to the point that everything she did seemed so foreign and cold, when I just desperately wanted/needed comfort and assurance that things would be okay[^capgras] 
   - the two guards at the end are like manifestations of cognitive dissonance and indecision
-- the ending also reminds me of For the Good Times by Al Green: when presented by the whirling chaos of life and the nonsensicality of it all, what can one do but resign one's head and hope for a tender embrace?
-- I'm currently listening to Louange à l'Éternité de Jésus from *Quartet for the End of Time* (performed by Yo-Yo Ma on his album *Songs from the Arc of Life*), and I'm thinking of how this would be a perfect song to accompany the ending of the novel
+- the ending also reminds me of "For the Good Times" by Al Green: when presented by the whirling chaos of life and the nonsensicality of it all, what can one do but resign one's head and hope for a tender embrace?
+- I'm currently listening to "Louange à l'Éternité de Jésus"[^louange] from *Quartet for the End of Time* (performed by Yo-Yo Ma on his album *Songs from the Arc of Life*), and I'm thinking of how this would be a perfect song to accompany the ending of the novel
   - from when I listened to it: slowing down, inevitability, ominous, like the ticking of a clock
   - from wikipedia: 
     - Jesus is considered here as the Word. A broad phrase, "infinitely slow", on the cello, magnifies with love and reverence the eternity of the Word, powerful and gentle, "whose time never runs out". The melody stretches majestically into a kind of gentle, regal distance. "In the beginning was the Word, and Word was with God, and the Word was God." (John 1:1 (King James Version))
@@ -39,7 +39,16 @@ Some initial notes and questions before I go back to revisit the quotes I marked
 
 [^capgras]: A tangent, and definitely does not have any basis in evidence, but this reminds me of [Capgras syndrome](https://en.wikipedia.org/wiki/Capgras_delusion) to some extent - my mother seemed like someone else, and I really believed for some moments that someone else was speaking through her and this was not my mother. But my mom said that she felt like I was reading her mind, so my analysis could not have been pure delusion. Makes me wonder what the causes of Capgras delusion may be, and if they can be influenced by the particular relationship that you have with that person you can no longer recognize.
 
+[^louange]: French for "Praise to the eternity of Jesus." From [Soundohm](https://www.soundohm.com/product/louange-a-l-eternite-de-j): It was composed while Messiaen was a prisoner of war in Stalag VIII-A, Görlitz, Germany, and first performed with other detained musicians inside the Nazi camp in January 1941. Inspired by the Book of Revelation, this music invokes the composers vision of "immutable peace", in its infinitely slow, ecstatic pacing and metre, described by the pianist Steven Osborne as “seeming to touch the far edges of human experience, subverting the idea of linear time”.
+
 ---
 
 Other random thoughts: the zen of tennis; how cute my mom was in the long black puffer jacket picking up tennis balls on the court (like a caterpillar or penguin); how Daniel is working too hard (6am-12am) and how he won't listen to people telling him to take care of his health and how fucked up it is that normative culture is set up so that one sacrifices living their lives for money and thinks it is good for them; had trouble sleeping last night because thinking of dad and the pain of seeing or not seeing him again and how he would feel at the last moment, regret or bitterness, very painful to think about and can't think about it for very long; fell asleep reading *A Wind in the Door* by Madeline l'Engle
 
+--- 
+
+A heartwarming photo from today:
+
+![Darla in the grass](darla-2021-09-30.jpg)
+
+Reminder to myself to fix the aspect ratio of images that are larger than the max width.
