--- a/content/posts/journal/2021/09/30.md
+++ b/content/posts/journal/2021/09/30.md
@@ -24,9 +24,9 @@ Some initial notes and questions before I go back to revisit the quotes I marked
 - themes of pride, ego, shame, doubt, guilt, anxiety, paranoia, and transaction in opposition to love, faith, and unconditional acceptance
 - can be read multiple ways, but I think it is more complex, existential, and metaphysical than a condemnation of bureaucracy 
 - resonates with my Crisis and in general, the torment of the human psyche 
-  - paranoia throughout the novel reminds me of the day following the peak of the Crisis and how my own mother was scaring me, how I was analyzing/reading so far into her actions and words to the point that everything she did seemed so foreign and cold, when I just desperately wanted/needed comfort and assurance that things would be okay[^capgras] 
+  - paranoia throughout the novel reminds me of the day following the peak of the Crisis and how my own mother was scaring me, how I was analyzing/reading so far into her actions and words to the point that everything she did seemed so foreign and cold and calculating and transactional, when I just desperately wanted/needed comfort and assurance that things would be okay[^capgras] 
   - the two guards at the end are like manifestations of cognitive dissonance and indecision
-- the ending also reminds me of "For the Good Times" by Al Green: when presented by the whirling chaos of life and the nonsensicality of it all, what can one do but resign one's head and hope for a tender embrace?
+- the ending also reminds me of "For the Good Times" by Al Green: when presented with the whirling chaos of life and the nonsensicality of it all, what can one do but resign one's head and hope for a tender embrace?
 - I'm currently listening to "Louange à l'Éternité de Jésus"[^louange] from *Quartet for the End of Time* (performed by Yo-Yo Ma on his album *Songs from the Arc of Life*), and I'm thinking of how this would be a perfect song to accompany the ending of the novel
   - from when I listened to it: slowing down, inevitability, ominous, like the ticking of a clock
   - from wikipedia: 
