Fix number of entries on year page

--- a/content/posts/journal/2021/09/30.md
+++ b/content/posts/journal/2021/09/30.md
@@ -3,6 +3,7 @@ title: September 30th 2021
 subtitle: Journal entry for 2021-09-30; life update; finished The Trial; other random thoughts
 date: '2021-09-30'
 lastupdated: '2021-10-01'
+group: '2021-09'
 published: true
 layout: post
 topics: ['journal', 'life update', 'the trial', 'kafka, franz', 'the Crisis', 'mother', 'father', 'songs from the arc of life', 'capgras' ]
