--- a/content/posts/journal/2021/10/01.md
+++ b/content/posts/journal/2021/10/01.md
@@ -3,6 +3,7 @@ title: October 1st 2021
 subtitle: Journal entry for 2021-10-01; more thoughts on The Trial; connections to Mystery of Iniquity by Ms. Lauryn Hill
 date: '2021-10-01'
 lastupdated: '2021-10-01'
+group: '2021-10'
 published: true
 layout: post
 topics: ['journal', 'the trial', 'kafka, franz', 'ms. lauryn hill']
