--- a/content/posts/journal/2021/10/11.md
+++ b/content/posts/journal/2021/10/11.md
@@ -1,8 +1,9 @@
 ---
 title: October 12th 2021
-subtitle: Journal entry for 2021-10-12
+subtitle: Journal entry for 2021-10-12; BNP Paribas Open; zooming out; oneness of humanity
 date: '2021-10-12'
 lastupdated: '2021-10-12'
+group: '2021-10'
 published: true
 layout: post
 topics: ['journal', 'tennis', 'zooming out', 'oneness']
