Fix month display on year page

--- a/content/posts/journal/2021/10/12.md
+++ b/content/posts/journal/2021/10/12.md
@@ -6,7 +6,7 @@ lastupdated: '2021-10-12'
 group: '2021-10'
 published: true
 layout: post
-topics: ['journal', 'tennis', 'zooming out', 'oneness']
+topics: ['journal', 'tennis', 'zooming out', 'the Crisis', 'oneness']
 category: journal
 ---
 
