--- a/content/posts/journal/2021/10/12.md
+++ b/content/posts/journal/2021/10/12.md
@@ -37,12 +37,12 @@ The feeling only lasted for a couple of seconds, but it made me appreciate how m
 ---
 
 Rene (my downstairs neighbor) has a beautiful cat (gold, blue/green/yellow eyes, leopard spots), which I've intermittently seen roaming the halls. 
-Sometimes the cat meows right outside my door, I open my door and try to coax her over to pet her, and she leaps away skittishly. 
+Sometimes the cat meows right outside my door, I open my door and try to coax him over to pet him, but he leaps away skittishly. 
 But this time was different. 
-She meowed, I opened my door, and she came right in. 
-She explored and looped around every inch of my apartment. 
-I got on all fours and explored with her, and she started purring! 
-I wonder why she chose this day to come inside. 
-Maybe she knew I was leaving soon and she wanted to get a peek before all of my stuff was gone. 
+He meowed, I opened my door, and he came right in. 
+He explored and looped around every inch of my apartment. 
+I got on all fours and explored with him, and he started purring! 
+I wonder why he chose this day to come inside. 
+Maybe he knew I was leaving soon and he wanted to get a peek before all of my stuff was gone. 
 Who knows!
 
