--- a/content/posts/journal/2021/10/14.md
+++ b/content/posts/journal/2021/10/14.md
@@ -29,7 +29,7 @@ And in revisiting this book, I've realized how much it probably influenced me an
 For example, a recurring concept in the book is the relativity of size: the protagonists visit organelles smaller than mitochondria and observe phenomena on the scale of galaxies. 
 But in each of these experiences, there are the same principles and patterns that repeat themselves across time and space. 
 The hierarchy in *A Wind in the Door* goes: farandolae → mitochondria → human → planet → galaxy → universe.
-It reminds me of my Crisis revelation of how things are nested into each other like *matryoska* (Russian nesting) dolls. 
+It reminds me of my Crisis revelation of how things are nested into each other like *matryoshka* (Russian nesting) dolls. 
 Also, I'm sure that this book influenced this dream that I had that can be found in my [dream journal](../../../../notes/personal/dream-journal/#2020-11-01):
 
 <div class='epigraph'>
@@ -65,8 +65,55 @@ It's a moving thought, in my opinion.
 
 ---
 
+Here's a song that I found recently: "Ecchymose" by Palatine. 
+It's in French, but here's the (Google Translate) translation:
+
+```
+Bye bye, Bye bye
+I have to go
+Before you leave a memory on your cheek
+Well fictionalized this story seemed so beautiful you know
+But faced with reality
+We love each other
+Bye bye, Bye bye
+I have to go
+There where my hands rest
+Grows bruises
+Bye bye, Oh bye bye
+You have to run away
+Before you keep on your skin
+A memory
+Everybody know it
+My hands leave traces
+You might as well hide your face
+We love each other
+Bye bye, Oh bye bye
+I have to run away
+Where my hands rest
+Grows bruises
+Where my hands rest
+Grows bruises
+Oh, oh, elder
+There where my hands rest
+Grows bruises ...
+Grows bruises ...
+```
+
+I think it's beautiful. 
+I've definitely lived the words. 
+Throughout my life, I've run away from things that could have been because I was scared of losing it and being left with nothing but the faint sting of a memory that fades with each reminiscence. 
+No longer! I've chosen love. 
+
+And through this song, I learned a new word! 
+(def) *ecchymosis*: a discoloration of the skin resulting from bleeding underneath, typically caused by bruising.
+The word is slightly relevant, because I often get unexplainable bruises on my arms and legs. 
+
+---
+
 Other random thoughts: I was thinking about the irony of whole and hole -- homonyms, but couldn't be more antithetical in meaning! 
 I was hoping that they'd have related etymologies, but no luck.[^awe] They are both of Germanic origin, though.
 
 [^awe]: The reason why I hoped this was that I've been thinking about how the modern day words *awesome* and *awful* have contrary meanings, but in older times, they were both used to describe things of great ineffableness. I think it captures the oneness of the illusory dualistic nature of many things - that which can be glorious is also that which can be horrifying. I think the concept of awe captures this well. 
 
+Also thinking about how I should have a "fun" book at all times -- I find myself hesitant to read because I feel the obligation to mark notes and quotes and make analyses.
+If I have a "fun" book that I don't feel the pressure to analyse, I think I'll read a lot more! 
