--- a/content/posts/journal/2021/10/14.md
+++ b/content/posts/journal/2021/10/14.md
@@ -61,7 +61,7 @@ I've never read War and Peace (on my to-dos!) but I read [this paper](https://sc
 </div>
 
 Everything matters. Everyone matters. We're all integral players in the grand symphony of the universe. 
-It's a moving thought, in my opinion.
+It's a compelling thought, in my opinion.
 
 ---
 
