--- a/content/posts/journal/2022/4/10.md
+++ b/content/posts/journal/2022/4/10.md
@@ -1,12 +1,12 @@
 ---
 title: April 10th 2022
-subtitle: Journal entry for 2022-04-10
+subtitle: Journal entry for 2022-04-10; a bird's love life; a slight descent into madness
 date: '2022-04-10'
 lastupdated: '2022-04-10'
 group: '2021-09'
 published: true
 layout: post
-topics: []
+topics: [journal, cognition, loneliness, uncertainty]
 category: journal
 ---
 
