--- a/content/posts/journal/2022/04/10.md
+++ b/content/posts/journal/2022/04/10.md
@@ -1,9 +1,9 @@
 ---
 title: April 10th 2022
-subtitle: Journal entry for 2022-04-10; a bird's love life; a slight descent into madness
+subtitle: Journal entry for 2022-04-10; a bird's love life; cognition; a slight descent into madness
 date: '2022-04-10'
 lastupdated: '2022-04-10'
-group: '2021-09'
+group: '2022-04'
 published: true
 layout: post
 topics: [journal, cognition, loneliness, uncertainty]
@@ -50,10 +50,8 @@ Maybe some people crave chaos and others crave stability. I think I am one of th
 It's an incurable malady to crave stability in such a manner, to have what I have self-diagnosed as a deathly phobia of contingencies, and yet to be so unwilling to take things on faith alone. Do I have the energy anymore? What is the point of it all? 
 
 Life seems a Sisyphean task. Then, Camus says, one must imagine oneself happy. Maybe that's why I'm attracted to Buddhism. The moment is sufficient for the moment. It seems to be a self-contained truth. To be is to be is to be. But is this a lie and a placation? How can one be certain of anything? 
-I think this is what drives logicians to madness[^logicomix]. It's uncertainty. And the sinking suspicion that the things that are certain are bound to be trivial.
+I think this is what drives logicians to madness. It's uncertainty. And the sinking suspicion that the things that are certain are bound to be trivial.
 
-[^logicomix]: as mentioned in *Logicomix*
-
-DFW says this is water, and I am drowning. I don't have fucking gills. You can hope that maybe, 100 million years into the future, humanity will evolve to have gills or invent some fancy contraption to enable life under water, but what do we do right now? Accept your fate and breathe the water deep into your lungs?
+DFW says this is water, and I am drowning. I don't have fucking gills. You can hope that maybe, 100 million years into the future, humanity will evolve to have gills or invent some fancy contraption to enable life under water, but what do we do right now? Accept fate and breathe the water deep into your lungs?
 
 At some point in thinking about these things, my mind hits a wall. It's like thinking about death. Some incomprehensible unknown that overwhelms you. At this point, I have no idea what to do with myself. I just want someone to understand. I just want a hug. 
