--- a/content/posts/journal/2022/03/05.md
+++ b/content/posts/journal/2022/03/05.md
@@ -6,7 +6,7 @@ lastupdated: '2022-03-05'
 group: '2022-03'
 published: true
 layout: post
-topics: [journal, the Crisis, cognition]
+topics: [journal, the Crisis, cognition, for the good times]
 category: journal
 ---
 
