--- a/content/posts/journal/2022/03/05.md
+++ b/content/posts/journal/2022/03/05.md
@@ -1,6 +1,6 @@
 ---
 title: March 5th 2022
-subtitle: Journal entry for 2022-03-05
+subtitle: Journal entry for 2022-03-05; thoughts on the Crisis; thinking about thoughts; For the Good Times
 date: '2022-03-05'
 lastupdated: '2022-03-05'
 group: '2022-03'
