make tables slightly better

--- a/content/posts/journal/2022/04/10.md
+++ b/content/posts/journal/2022/04/10.md
@@ -44,14 +44,14 @@ What is more important? Stability or truth? Consistency or completeness? Machine
 
 </div>
 
-Humans crave the unknown. Why? Why do we get bored? Shouldn't it be the case that we've evolved to prefer stability, safety, predictability? Why do we insist on living at the edge of chaos? Perhaps we need to feel progress and advancement towards some goal. Why? Do we feel that if we aren't making progress, we're falling behind? Do we all have some form of existential anxiety stemming from our knowledge of the future, the knowledge of our own deaths, that we have the compulsion to prepare for?  
+Humans crave the unknown. Why? Why do we get bored? Shouldn't it be the case that we've evolved to prefer stability, safety, predictability? Why do we insist on living at the edge of chaos? Perhaps we need to feel progress and advancement towards some goal. Why? Do we feel that if we aren't making progress, we're falling behind? Do we all have some form of existential anxiety stemming from our knowledge of the future, or the knowledge of our own deaths, that we have the compulsion to prepare for?  
 
 Maybe some people crave chaos and others crave stability. I think I am one of the latter, since I've been in enough volatility to last me a lifetime and because, as a result of that conditioning, I create enough chaos and uncertainty in my own mind. 
 It's an incurable malady to crave stability in such a manner, to have what I have self-diagnosed as a deathly phobia of contingencies, and yet to be so unwilling to take things on faith alone. Do I have the energy anymore? What is the point of it all? 
 
-Life seems a Sisyphean task. Then, Camus says, one must imagine oneself happy. Maybe that's why I'm attracted to Buddhism. The moment is sufficient for the moment. It seems to be a self-contained truth. To be is to be is to be. But is this a lie and a placation? How can one be certain of anything? 
+Life seems a Sisyphean task. Then, Camus declares, one must imagine oneself happy. Maybe that's why I'm attracted to Buddhism. The moment is sufficient for the moment. It seems to be a self-contained truth. To be is to be is to be. But is this a lie and a placation? How can one be certain of anything? 
 I think this is what drives logicians to madness. It's uncertainty. And the sinking suspicion that the things that are certain are bound to be trivial.
 
-DFW says this is water, and I am drowning. I don't have fucking gills. You can hope that maybe, 100 million years into the future, humanity will evolve to have gills or invent some fancy contraption to enable life under water, but what do we do right now? Accept fate and breathe the water deep into your lungs?
+DFW says this is water, and I am drowning. I don't have fucking gills. You can hope that maybe, 100 million years into the future, humanity will evolve to acquire gills or invent some fancy contraption to enable life under water, but what do we do right now? Accept fate and breathe the water deep into your lungs?
 
 At some point in thinking about these things, my mind hits a wall. It's like thinking about death. Some incomprehensible unknown that overwhelms you. At this point, I have no idea what to do with myself. I just want someone to understand. I just want a hug. 
