--- a/content/posts/journal/2022/04/13.md
+++ b/content/posts/journal/2022/04/13.md
@@ -19,18 +19,18 @@ He said "Here, I know you like this part" (of the fish) and laid the writhing ma
 That was all I remember. But when I woke up, I was extremely repulsed.
 
 I have my suspicions regarding the origin of this dream in my subconscious, which is why I decided to record it.
-Earlier this week, I bought some oxtails to make my favorite comfort Korean dish: *ggori-gomtang*. 
+Earlier this week, I bought some oxtails to make my favorite Korean comfort dish: *ggori-gomtang*. 
 I don't usually cook meat at home, but I've been wanting to make this soup for a while.
 However, when I was handling the meat, I was immediately overcome by an involuntary sense of revulsion.
 Something about the texture of the flesh, the color of blood, the stringy tendons, the definition of the circles on the oxtail cartilage — I almost felt like throwing up. 
 
 I made the soup, but that experience planted the seeds of guilt in my mind. 
 I started to think about how there is no moral justification for the consumption of meat (outside of extenuating personal circumstances, of which I have none), and how I know this and yet still continue to eat it out of my own selfishness.
-I contemplated setting a hard and fast rule on not eating meat at home, and somehow this seemed worse to me than continuing to eat it both at home and out: at least now, I'm forced to be uncomfortable and think about the consequences of my actions.
+I contemplated setting a hard and fast rule on not eating meat at home, but somehow this seemed worse to me than continuing to eat it both at home and out: at least now, I'm forced to be uncomfortable and think about the consequences of my actions.
 If I allow myself to eat meat in restaurants, I'd be covering up my shame, ignoring the root of the moral issue, and yet I may think myself more moral by virtue of not eating meat at home. 
 Things like this should not be left out of sight, out of mind. 
 
 This experience made me think about a role that dreams often seem to play in one's (or at least in my) brain: the role of the conscious. 
-I was feeling guilty about cooking the oxtails, and my dream hung that over me in an unforgettable symbolic form. 
+I was feeling guilty about cooking the oxtails but tried to downplay my guilt, and my dream hung it over me in an unforgettable symbolic form. 
 Not to be heretical, but this makes me wonder if the stories in the Bible about an angel coming to someone in the night and conveying the words of God to them were, in reality, the product of that person's dreams.  
 
