--- a/content/posts/journal/2022/03/05.md
+++ b/content/posts/journal/2022/03/05.md
@@ -42,7 +42,7 @@ I read this quote from *The Miracle of Mindfulness* recently:
 
 </div>
 
-Upon reading this line, my heart swelled. One of my favorite songs (and will always be, until the end of time) is ["For the Good Times"](https://www.youtube.com/watch?v=Y2IpoTKnDPw) by Al Green: the first time I heard it, I couldn't articulate nor understand the emotions that overcame me. I played this song on repeat and bawled for a solid 30 minutes. 
+Upon reading this line, my heart overflowed. One of my favorite songs (and will always be, until the end of time) is ["For the Good Times"](https://www.youtube.com/watch?v=Y2IpoTKnDPw) by Al Green: the first time I heard it, I couldn't articulate nor understand the emotions that overcame me. I played this song on repeat and bawled for a solid 30 minutes. 
 
 But this quote — there is no more perfect textual encapsulation of my love and attachment to the song. 
 Listen to the swelling of the synths and the soft, steady beat in the first opening seconds: does it not feel as if you are swaddled within a slow, constant, heavy rotation? 
@@ -51,10 +51,10 @@ Even before reading these words, whenever I listened to this song, I felt an ima
 I think that this image captured the feeling of cherishing another as if they were "the axis on which the whole earth revolves." 
 
 The lyrics, too, embody Thich Nhat Hahn's reminder that "only this actual moment is life." 
-Al Green, with such bittersweet cadence, begs: *Let's just be glad // we have this time // to spend together // There is no need // to watch the bridges // that we're burning.*
+Al Green, with such bittersweet cadence, begs: *Let's just be glad // we have this time // to spend together // There is no need // to watch the bridges // that we're burning...*
 It's no matter now: let's just join in one last tender embrace, even as our world crumbles apart. 
 It hurts my heart to even write this. The thoughts aren't really fully coming through, and I'm not happy with how the words have come out, but this'll have to do for now, at the very least to record the ideas. 
 
-Part of the reason that it makes me so irreparably sad is that it reminds me of the cursed human condition that is: only when we know that there isn't any future are we able to fully come to the moment. 
+Part of the reason that it makes me so irreparably sad is that it reminds me of the accursed human condition that is: only when we know that there isn't any future are we able to fully come to the moment. 
 We only are reminded of how good it is when it's about to be gone. 
 These thoughts remind me of loss and death. 
