--- a/content/posts/journal/2022/04/10.md
+++ b/content/posts/journal/2022/04/10.md
@@ -54,4 +54,4 @@ I think this is what drives logicians to madness. It's uncertainty. And the sink
 
 DFW says this is water, and I am drowning. I don't have fucking gills. You can hope that maybe, 100 million years into the future, humanity will evolve to acquire gills or invent some fancy contraption to enable life under water, but what do we do right now? Accept fate and breathe the water deep into your lungs?
 
-At some point in thinking about these things, my mind hits a wall. It's like thinking about death. Some incomprehensible unknown that overwhelms you. At this point, I have no idea what to do with myself. I just want someone to understand. I just want a hug. 
+At some point in thinking about these things, my mind hits a wall. It's like thinking about death: some incomprehensible unknown that overwhelms you. At this point, I have no idea what to do with myself. I just want someone to understand. I just want a hug. 
