--- a/content/posts/journal/2022/04/13.md
+++ b/content/posts/journal/2022/04/13.md
@@ -15,7 +15,7 @@ I only recall a single fragment of it. Someone was cooking a gargantuan purple f
 Its jaundiced, bulging eyes protruded from its head and its body was covered in yellowed spikes. 
 Most nauseatingly, its mouth was stuffed with tentacles, colored with the same purple hue and littered with the same spikes as were on the rest of the body. 
 The person cooking the fish looked at me and then grabbed ahold of the tentacles and twisted them loose from the fish's mouth. 
-He said "Here, I know you like this part" (of the fish) and laid the writhing mass on my plate.
+He said, "Here, I know you like this part" (of the fish) and laid the writhing mass on my plate.
 That was all I remember. But when I woke up, I was extremely repulsed.
 
 I have my suspicions regarding the origin of this dream in my subconscious, which is why I decided to record it.
